src/templates/global.css
* {
  max-width: 100%;
  margin-block: 0;
}

body {
  font-weight: 300;
  line-height: 1.5;
  background: var(--jahia-navy-blue);
}

a {
  color: #06a;
}

img {
  height: auto;
  vertical-align: bottom; /* Avoid that annoying 2px shift */
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Plus Jakarta Sans Variable", system-ui, sans-serif;
  font-weight: 500;
  color: var(--jahia-title-color);
  text-wrap: balance;
}

h1 {
  font-size: 3em;
  line-height: 1.25;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.25em;
}

h5 {
  font-size: 1.125em;
}

h6 {
  font-size: 1em;
}

strong {
  font-weight: 400;
  color: var(--jahia-title-color);
}

._richtext > * + * {
  margin-block-start: 1rem;
}

._richtext li + li {
  margin-block-start: 0.25rem;
}

._richtext li::marker {
  /* Fancy ✓ SVG */
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' width='1em' viewBox='0 0 20 14'%3E%3Cpath stroke='%2300a1e3' stroke-width='2' stroke-linecap='square' d='M1.5 7.5L6 12H8L18.5 1.5'/%3E%3C/svg%3E")
    "  ";
}

